--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     
     <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
-      <img src="assets/img/logo.png" height="100px" width="100px">
+      <img src="assets/img/Logo.png" height="100px" width="100px">
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
@@ -115,7 +115,7 @@
           </div><!-- End Client Item -->
 
           <div class="col-xl-2 col-md-3 col-6 client-logo">
-            <img src="assets/img/clients/Deseo.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/deseo.png" class="img-fluid" alt="">
           </div><!-- End Client Item -->
 
           <div class="col-xl-2 col-md-3 col-6 client-logo">
